fix: remove extra spacing in aside component (#325)
* fix: remove extra spacing in aside component

* chore: udpate example

* chore: update example and padding

--- a/packages/gatsby-theme-carbon/src/components/Aside/Aside.module.scss
+++ b/packages/gatsby-theme-carbon/src/components/Aside/Aside.module.scss
@@ -17,7 +17,7 @@
 
 :global(.#{$prefix}--row) .aside p {
   @include carbon--type-style('body-long-01');
-  width: 75%;
+  width: 85%;
   padding-right: $spacing-05;
 }
 
